sampleredis/sampleredis/kubernetes/istio-routes.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: applications-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http2
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: sample-redis-app
spec:
  hosts:
  - "*"
  gateways:
  - applications-gateway
  http:
  - match:
      - uri:
          prefix: /person
    route:
    - destination:
        host: sample-redis-app
        subset: v1
#        port:
#          number: 8080
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sample-redis-app
spec:
  host: sample-redis-app
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
  - name: v1
    labels:
      version: v1
